2005-05-18  Richard Henderson  <rth@redhat.com>

	PR target/21632
	* config/ia64/ia64.c (ia64_extra_constraint) <'T'>: Use
	small_addr_symbolic_operand.

2005-05-18  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* config/sparc/sol2.h (TARGET_DEFAULT): Add back MASK_APP_REGS.
	* config/sparc/sol2-64.h (TARGET_DEFAULT): Likewise.
	* config/sparc/sp-elf.h (TARGET_DEFAULT): Delete.
	* doc/invoke.texi (SPARC options): Document that -mapp-regs is
	the default on Solaris too.

2005-05-17  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/21610
	* c-typeck.c (decl_constant_value_for_broken_optimization): If not
	returning DECL, call unshare_expr.

	* varasm.c (struct constant_descriptor_tree): Add hash field.
	(const_desc_hash): Just return hash field.
	(const_desc_eq): If hash values are different, return 0 immediately.
	(output_constant_def): Compute hash field of temporary key, use
	htab_find_slot_with_hash instead of htab_find_slot.  Set hash in
	newly built constant descriptor.
	(lookup_constant_def): Compute hash field of temporary key, use
	htab_find_with_hash instead of htab_find.

2005-05-16  Richard Henderson  <rth@redhat.com>

        PR target/21556
        * config/ia64/ia64.md (load_dtpmod, load_ltoff_dtpmod, load_dtprel,
        load_dtprel64, load_dtprel22, load_dtprel_gd, load_ltoff_dtprel,
        add_dtprel, add_dtprel14, add_dtprel22, load_tprel, load_tprel64,
        load_tprel22, load_tprel_ie, load_ltoff_tprel, add_tprel, add_tprel14,
        add_tprel22): Remove mode from symbolic operand.

2005-05-15  Mark Mitchell  <mark@codesourcery.com>

	Backport:
	2005-05-09  Mark Mitchell  <mark@codesourcery.com>
	PR 18655
	* dwarf2out.c (output_call_frame_info): Use DWARF2_FRAME_REG_OUT
	before outputting DWARF_FRAME_RETURN_COLUMN.

2005-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/21551
	* config/ia64/ia64.c (ia64_expand_move): Don't add addend twice.

2005-05-13  David Edelsohn  <edelsohn@gnu.org>

	PR middle-end/21237